--- a/ravenous/public/index.html
+++ b/ravenous/public/index.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,500,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
     
-    <title>React App</title>
+    <title>ravenous</title>
   </head>
   <body>
     <noscript>
